--- a/index.html
+++ b/index.html
@@ -1,50 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Triva game</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="assets/javascript/app.js"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
+  <title>Pokemon Trivia Game</title>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-
-  <div id="startGame">
-    <h1>Trivia Game</h1>
-    <button id="startButton">START</button>
-  </div>
-
-
-  <div id="modal_window">
-    <div class="modal_message">
-      <p></p>
+  <div id="wrapper">
+    <div id="subwrapper">
+      <div id="quiz-area">
+        <button id="start" class="btn">Start</button>
+      </div>
+      <audio autoplay preload='auto' loop id="myAudio">
+      </audio>
     </div>
   </div>
-
-  <div class="container">
-    <div>TIME: <span></span></div>
-    <div>SCORE: <span></span></div>
-  </div>
-
-   <div class="container">
-     <div class="row">
-       <div class="left half">
-         <div class="container"><button id="buttonOne" data-index="0"></button></div>
-       </div>
-       <div class="left half">
-         <div class="container"><button id="buttonTwo" data-index="1"></button></div>
-       </div>
-     </div>
-     <div class="row">
-       <div class="left half">
-         <div class="container"><button id="buttonThree" data-index="2"></button></div>
-       </div>
-       <div class="left half">
-         <div class="container"><button id="buttonFour" data-index="3"></button></div>
-       </div>
-     </div>
-   </div>
-
-
+  <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
+
 </html>
